[package]
name = "falling-sand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed-vectors = "2.0.5"
wasm-bindgen = "0.2.83"
yew = { version = "0.19.3"}

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]