[tool.poetry]
name = "falling-sand"
version = "0.1.0"
description = ""
authors = ["c1m50c <58411864+c1m50c@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
