[tool.poetry]
name = "falling-sand"
version = "0.1.0"
description = ""
authors = ["c1m50c <58411864+c1m50c@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
pylint = "^2.14.4"
pytest = "^7.1.2"

[tool.poetry.scripts]
main = "falling_sand.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
